# slack-bot-server

./: .gitignore  .pre-commit-config.yaml  Makefile  Procfile  README.md  pyproject.toml  requirements.txt
scripts/: check_deps.sh
src/slack_bot_server/: main.py
src/slack_bot_server/middlewares/: validate_env.py  verify_slack_signature.py
